Flask-Api/terraform/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: gcr.io/assessment-434523/flask-time-api:latest
        ports:
        - containerPort: 5000
